2005-12-06   Theodore Kilgore <kilgota@auburn.edu>

	First check-in.